@@ -1,3 +1,10 @@
+Mon Mar 21 14:48:28 2005  George Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c: set default precision to 128
+	  bits, it's faster and most people don't need more.  Also save the
+	  precision in config.  Further sanitize things from the command line
+	  and the config, to avoid using bogus values.
+
 Mon Mar 21 11:18:57 2005  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.[ch]: move the whole gmp structures into the MpwRealNum
